<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:paddingTop="50dp"
    android:background="@color/app_background">

    <ImageView
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@android:color/black"
        android:textSize="35sp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_subtitle"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:textSize="16sp"/>

    <EditText
        style="@style/AppInput"
        android:layout_marginTop="30dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:autofillHints="@string/email" />

    <EditText
        style="@style/AppInput"
        android:layout_marginTop="15dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:autofillHints="@string/password" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_forgot"
        android:layout_gravity="end"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="35dp"
        android:textSize="16sp"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:text="@string/login"
        style="@style/AppButton"/>

    <TextView
        android:id="@+id/txt_login_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_text"
        android:layout_marginTop="15dp"
        android:textSize="14sp"
        android:layout_gravity="center"
        android:textStyle="bold"/>

</LinearLayout>