<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ChatActivity"
    android:background="@drawable/chat_background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/app_color">

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_arrow_back"
            android:layout_centerVertical="true"
            android:layout_marginStart="12dp"
            android:contentDescription="@string/icon" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/user_img"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_toEndOf="@+id/backBtn"
            android:layout_centerVertical="true"
            android:src="@drawable/profile"
            android:layout_marginStart="7dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/user_img"
            android:layout_centerVertical="true"
            android:layout_marginStart="7dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/full_name"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/online"
                android:textColor="@android:color/white"/>

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#eee"
        android:padding="10dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/enter_message"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/chat_input_background"
            android:hint="@string/chat_message_input"
            android:textColorHint="@android:color/black"
            android:paddingStart="16dp"
            android:autofillHints="@string/chat_input"
            android:inputType="textMultiLine"
            tools:ignore="RtlSymmetry" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/chat_send_button_background"
            android:layout_centerVertical="true">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:src="@drawable/ic_send"
                android:contentDescription="@string/chat_input" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</RelativeLayout>