<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.LoginActivity"
    android:background="@color/app_background">

    <LinearLayout
        android:id="@+id/top_header"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="@color/app_color">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="75dp"
            style="@style/ProfileImage"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/full_name"
            android:layout_marginTop="10dp"
            android:textSize="32sp"
            android:textColor="@android:color/white"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center_vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="6dp"
            android:src="@drawable/ic_arrow_back"
            android:contentDescription="@string/icon" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <!--
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="6dp"
            android:src="@drawable/ic_arrow_back"
            android:contentDescription="@string/icon"/>
        -->
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_below="@+id/top_header">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/item_settings_background"
            android:padding="10dp"
            tools:ignore="UselessParent">

            <ImageView
                android:id="@+id/imageEmail"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginStart="20dp"
                app:srcCompat="@drawable/ic_email"
                android:contentDescription="@string/icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:text="@string/email"
                android:textColor="@android:color/black"
                android:textSize="17sp"
                android:textStyle="bold"
                android:layout_toEndOf="@+id/imageEmail"
                android:layout_centerVertical="true"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/item_settings_background"
            android:padding="10dp"
            tools:ignore="UselessParent">

            <ImageView
                android:id="@+id/imageSettings"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginStart="20dp"
                app:srcCompat="@drawable/ic_settings"
                android:contentDescription="@string/icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:text="@string/settings"
                android:textColor="@android:color/black"
                android:textSize="17sp"
                android:textStyle="bold"
                android:layout_toEndOf="@+id/imageSettings"
                android:layout_centerVertical="true"/>
        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>